tests/ui/typeck/issue-110052.stderr
error[E0223]: ambiguous associated type
  --> $DIR/issue-110052.rs:6:30
   |
LL |     for<'iter> dyn Validator<<&'iter I>::Item>:,
   |                              ^^^^^^^^^^^^^^^^ help: use the fully-qualified path: `<&'iter I as IntoIterator>::Item`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
